2005-12-06  Janis Johnson  <janis187@us.ibm.com>

	PR testsuite/25247
	* lib/target-supports-dg.exp (dg-skip-if): Fix target selector for
	use in selector expressions.
	(dg-xfail-if): Ditto.
	* gcc.test-framework/dg-dot-run-sif-exp-P.c: New test.
	* gcc.test-framework/dg-dot-run-sif-exp-U.c: New test.
	* gcc.test-framework/dg-dot-run-xif-exp-P.c: New test.
	* gcc.test-framework/dg-dot-run-xif-exp-XP.c: New test.
	* gcc.test-framework/test-framework.exp: Skip generated tests if
	CHECK_TEST_FRAMEWORK is not 1.

2005-12-05  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/i386/movq-2.c: Add -mtune=pentium4 to
	dg-options.

2005-12-02  Mark Mitchell  <mark@codesourcery.com>

	PR c++/24173
	* g++.dg/template/friend40.C: New test.

2005-12-02  Jakub Jelinek  <jakub@redhat.com>

	PR target/25199
	* gcc.target/i386/movq-2.c: New test.
	* gcc.target/i386/movq.c: Remove target i?86, instead add
	dg-require-effective-target ilp32.

	Backport from mainline:
	2005-06-07  Dale Johannesen  <dalej@apple.com>

	* gcc.target/i386/movq.c: New.

2005-12-02  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c++/24103
	* g++.dg/other/default1.C: New test.

2005-12-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c-torture/execute/builtins/fprintf.c,
	gcc.c-torture/execute/builtins/fputs-lib.c,
	gcc.c-torture/execute/builtins/fputs.c,
	gcc.c-torture/execute/builtins/lib/fprintf.c,
	gcc.c-torture/execute/builtins/lib/printf.c,
	gcc.c-torture/execute/builtins/printf.c: Test the unlocked style.

2005-11-30  Dale Johannesen  <dalej@apple.com>

	PR rtl-opt/24930
	* gcc.c-torture/compile/pr24930.c:  New.

2005-11-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	PR testsuite/19275
	Backport from mainline:

	* gcc.dg/20020919-1.c:  Fix for x86 Darwin.
	* gcc.dg/20020919-1.c:  Remove unnecessary conditional.

2005-11-30  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/tls/opt-11.c: New test.

2005-11-29  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/open_access_1.f90: New test.
